--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="display: flex; justify-content: center; align-items: center; background-color: blue;">
-        <h1 style="font-size: 3rem; font-weight: 600; text-align: center; color: white">hola CIAF 2024 Smith</h1>
+        <h1 style="font-size: 3rem; font-weight: 600; text-align: center; color: white">hola CIAF 2024</h1>
     </div>
 </body>
 </html>
