--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./index.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div style="display: flex; justify-content: center; align-items: center; background-color: blue;">
-        <h1 style="font-size: 3rem; font-weight: 600; text-align: center; color: white">hola CIAF 2024</h1>
+    <div class="box">
+        <div class="box-inner">
+            <h1 class="title">hola CIAF 2024</h1>
+        </div>
     </div>
 </body>
 </html>
